# AMPB

./: LICENSE.txt  README.md  docker-compose.yml
AMPBLib/: pyproject.toml
AMPBLib/ampblib/: __init__.py
App/: AMPB-Sim.py  AMPB-Sim_requirements.txt  Dockerfile.ampb
MongoDB/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-1249058164978824966.wt  collection-0-5037313026921233291.wt  collection-1-1249058164978824966.wt  collection-2-5037313026921233291.wt  collection-24-2762726042392909199.wt  collection-32-2762726042392909199.wt  collection-4-2378417464763014090.wt  collection-4-5037313026921233291.wt  collection-6-2378417464763014090.wt  collection-7-5037313026921233291.wt  index-1-5037313026921233291.wt  index-2-1249058164978824966.wt  index-21-2762726042392909199.wt  index-22-2762726042392909199.wt  index-23-2762726042392909199.wt  index-25-2762726042392909199.wt  index-26-2762726042392909199.wt  index-27-2762726042392909199.wt  index-3-1249058164978824966.wt  index-3-5037313026921233291.wt  index-33-2762726042392909199.wt  index-34-2762726042392909199.wt  index-35-2762726042392909199.wt  index-4-1249058164978824966.wt  index-5-2378417464763014090.wt  index-5-5037313026921233291.wt  index-6-5037313026921233291.wt  index-7-2378417464763014090.wt  index-8-5037313026921233291.wt  index-9-5037313026921233291.wt  sizeStorer.wt
Notebook/: NVDA_2015-01-05_2025-05-23_SA.csv  Orquestador.ipynb  Predictor ARIMA.ipynb  Predictor Aleatorio.ipynb  Predictor LSTM.ipynb  Predictor Prophet.ipynb  Predictor Random Forest.ipynb  Predictor SARIMAX.ipynb  (+5 more)
(+2346 files in other folders)
